--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,11 @@ project(platform)
 SET(CMAKE_CXX_COMPILER "g++")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -DNDEBUG -Wall -std=c++14 -fPIC -pthread")
 
+# 安装第三方库
+find_package(Eigen3 REQUIRED)
+include_directories(${EIGEN3_INCLUDE_DIR})
+link_directories(${EIGEN3_LIBRARY_DIRS})
+
 # 编译
 if(COMPILE_MODE MATCHES "TEST")
     add_subdirectory(src/test)
